test/src/e2e_vm_tests/test_programs/should_pass/language/multi_item_import/src/bar.sw
library;
pub mod double_bar;

pub struct Bar1 {
    pub a: u32,
}

pub struct Bar2 {
    pub a: u64,
}
