test/src/e2e_vm_tests/test_programs/should_fail/shadow_import/src/bar.sw
library;

pub struct Bar1 {
    a: u32,
}

pub struct Bar2 {
    b: u32,
}

pub struct Bar3 {
    c: u32,
}
